Adiciona o projeto Afilia Analytics à seção de projetos, incluindo título, descrição, tecnologias e links relevantes. Também adiciona novos arquivos de imagem nas pastas public/assets e src/assets, enriquecendo os recursos visuais da aplicação e atualizando as traduções em inglês e português.

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -162,6 +162,10 @@
         "freelCRM": {
           "title": "FreelCRM",
           "description": "Complete and modern CRM for freelancers to manage clients and proposals. Minimalist interface with real-time dashboard, Kanban board for proposals and advanced metrics. Everything synchronized via Supabase Realtime for maximum efficiency."
+        },
+        "afilia": {
+          "title": "Afilia Analytics",
+          "description": "Complete platform for affiliates of major platforms (Shopee, Amazon, Mercado Livre). Upload CSV/Excel reports, automatic sales analysis, control of best-selling products, conversion metrics and strategic insights to maximize commissions."
         }
       }
     }
