Adiciona o projeto Smart Document Analyzer à seção de projetos, incluindo título, descrição, tecnologias e links relevantes. Também adiciona novos arquivos de imagem nas pastas public/assets e src/assets, além de atualizar as traduções em inglês e português, enriquecendo a apresentação da aplicação.

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -166,6 +166,10 @@
         "afilia": {
           "title": "Afilia Analytics",
           "description": "Complete platform for affiliates of major platforms (Shopee, Amazon, Mercado Livre). Upload CSV/Excel reports, automatic sales analysis, control of best-selling products, conversion metrics and strategic insights to maximize commissions."
+        },
+        "smartDocumentAnalyzer": {
+          "title": "Smart Document Analyzer",
+          "description": "Intelligent system for academic article analysis. Upload PDFs, automatic summary generation, topic identification and insights using AI (Groq Cloud API + Llama 3). Scalable backend with NestJS and modern frontend with Angular 18."
         }
       }
     }
