--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -174,6 +174,10 @@
         "domsapon": {
           "title": "Dom Sapon",
           "description": "Complete barbershop scheduling system with client and admin panels. Ultra responsive interface, instant scheduling via Supabase Realtime, complete service management, clients and revenue tracking. Admin dashboard with real-time metrics, appointment confirmation and full barbershop control."
+        },
+        "asyncNewsScraper": {
+          "title": "Async News Scraper",
+          "description": "High-performance asynchronous system for collecting and exposing news from G1 portal. Complete REST API built with FastAPI, async SQLAlchemy and BeautifulSoup4. Professional architecture with 100% asynchronous code, complete static typing and test suite."
         }
       }
     }
