--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -174,6 +174,10 @@
         "domsapon": {
           "title": "Dom Sapon",
           "description": "Sistema completo de agendamento para barbearia com painéis cliente e admin. Interface ultra responsiva, agendamento instantâneo via Supabase Realtime, gerenciamento completo de serviços, clientes e receitas. Dashboard admin com métricas em tempo real, confirmação de agendamentos e controle total da barbearia."
+        },
+        "asyncNewsScraper": {
+          "title": "Async News Scraper",
+          "description": "Sistema assíncrono de alto desempenho para coleta e exposição de notícias do portal G1. API REST completa construída com FastAPI, SQLAlchemy async e BeautifulSoup4. Arquitetura profissional com 100% de código assíncrono, tipagem estática completa e suite de testes."
         }
       }
     }
